feat: QC resolved Major [wip]